# penalty-research

./: .env.example  .gitattributes  .gitignore  README.md  fetch_penalties_data.py  penalty_cap_empirical_approach.ipynb  pyproject.toml  short_term_volatility_estimation.ipynb  solver_revert_option_pricing.ipynb
.devcontainer/: Dockerfile  devcontainer.json
docs/: dataset.md
notebooks/: cap_model.ipynb  example.ipynb  penalties_analysis.ipynb  penalty_cap_empirical_approach.ipynb  penalty_cap_empirical_approach_8pct.ipynb  roland_nb.ipynb  short_term_volatility_estimation.ipynb
scripts/: README.md  db_find_inmarket.py  db_grain_check.py  db_model_columns.py  db_overview.py  db_target_detail.py  fetch_penalties_data.py
sql/: dune_trade_markout.sql  orderbook_dataset.sql
