[project]
name = "penalty-research"
version = "0.1.0"
description = "Analysis notebooks"
requires-python = ">=3.13"
dependencies = [
    "dune-client>=1.11.3",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "kaleido>=1.3.0",
    "nbstripout>=0.7",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]

[tool.uv]
# This project is an environment for notebooks, not an installable package.
package = false
