[project]
name = "penalty-research"
version = "0.1.0"
description = "Analysis notebooks"
requires-python = ">=3.13"
dependencies = [
    "dune-client>=1.11.3",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "nbstripout>=0.7",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "ipywidgets>=8.1",
    "ipympl>=0.9.4",
]

[tool.uv]
# This project is an environment for notebooks, not an installable package.
package = false
